--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,7 +9,7 @@
   --color-black: #000000;
   --color-white: #FFFFFF;
   --color-green: #00D26A;
-  --color-green-dark: #00B359;
+  --color-green-dark: #C9D521;
   --color-gray-50: #FAFAFA;
   --color-gray-100: #F5F5F7;
   --color-gray-200: #E5E5E7;
