Change green color variable to a new value

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,7 +8,7 @@
   /* Paleta Premium */
   --color-black: #000000;
   --color-white: #FFFFFF;
-  --color-green: #00D26A;
+  --color-green: #B4BD3D;
   --color-green-dark: #C9D521;
   --color-gray-50: #FAFAFA;
   --color-gray-100: #F5F5F7;
