--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,9 +8,9 @@
   /* Paleta Premium */
   --color-black: #000000;
   --color-white: #FFFFFF;
-  --color-green: #00D26A;
-  --color-green-dark: #00B359;
-  --color-green-light: #80FFC2;
+  --color-green: #B4BD3D;
+  --color-green-dark: #C9D521;
+  --color-green-light: #EFFF0A;
   --color-gray-50: #FAFAFA;
   --color-gray-100: #F5F5F7;
   --color-gray-200: #E5E5E7;
